# resolver_api

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/axum/src/requests/: get_num.rs  get_string.rs  health_check.rs  mod.rs  to_string.rs
src/: error.rs  lib.rs
