[workspace]
members = ["derive", "examples/*"]

[workspace.package]
version = "1.1.1"
edition = "2021"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mbecker20/resolver_api"

[package]
name = "resolver_api"
description = "traits to structure request / response / resolver relationships"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resolver_api_derive = { path = "derive" }